# AGSv3

./: README.md  agsparser.py  app.py  main.py  pyproject.toml  workingapp.py
ags_data/: 31039-GE9907_7A.AGS  31869-GE9907_7c.ags  33597-1270D.AGS  33597-1605.AGS  33597-GE9907_68.AGS  38531-14.30.ags  38531-14.44c.ags  38531-14.58t.ags  38531-14.70.ags  38531-14.72.ags  39754-14.78a.ags  39754-Labwo33.14.AGS  39754-WO_001.AGS  40033-14.78b.ags  41274-GE2004_06-3C.ags  41627-GE2004_06-03e.ags  41627-SL140123.ags  44063-asd 010472.ags  48423-GE-2008-04-6 rev0.ags  48423-LABWO 37.139.AGS  52743-09 0461 03 20 R001 rev0.ags  52743-GE-2008-37.75.AGS  53080-09.ags  53080-wo_017.ags  53545-09 0461 03 18A R001 rev0.ags  53769-LABWO_020601.AGS  53769-LABWO_020611.AGS  53769-LABWO_21101.AGS  53769-Lab Schedule No.1.AGS  53769-Lab Schedule No.2.AGS  53769-Lab Schedule No.4.AGS  53769-j0911s26-gi01.ags  55973-11 0365 03 6 R001 rev0.ags  55973-wo_102.ags  61771-GE201407.17.ags  61771-wo_012.ags  62423-37.17 (new).ags  62423-GE201407.5.ags  62424-37.3(new).ags  63264-GE201407.17A.ags  (+4 more)
legacy_code/: AGS_Excel.py  Combine_AGS.py  Concat_AGS.py  Info_Extract.py  Match_Soil.py  Search_Depth.py  Search_KeyWord.py  View_single_AGS.py  __Calculate_Q.py_Error.txt  ___All_Errors.txt  app.py  blast_class.ipynb
src/domain/: models.py
src/parsing/: __init__.py  ags3.py  ags4.py  interface.py  utils.py
src/processing/: combiner.py
src/ui/: components.py
tests/: verify.py
